Add Image Upload

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 VITE_API_BASE_URL=http://localhost:5000/api
+
+VITE_IMAGE_UPLOAD_KEY=f9ff232a38fd0eeacea1d98d1d7df33b
+
+VITE_IMAGE_UPLOAD_URL=https://api.imghippo.com/v1/upload
