--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=http://localhost:5000/api
+VITE_API_BASE_URL=https://favorite-movie-be-production.up.railway.app/api
 
 VITE_IMAGE_UPLOAD_KEY=f9ff232a38fd0eeacea1d98d1d7df33b
 
